--- a/src/renderer/components/main/css/mainComponentsStyle.module.css
+++ b/src/renderer/components/main/css/mainComponentsStyle.module.css
@@ -21,7 +21,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  gap: 1vw;
+  margin-left: 0.5vw;
 }
 
 .mainMenuBar .data .frameData {
