Reworked Main tab view
- Make settings out of tabs view
- Reworked front

--- a/src/renderer/Theme.module.css
+++ b/src/renderer/Theme.module.css
@@ -3,6 +3,7 @@
   --base-background-color: #0a0a0a;
   --background-color: #1a1a1a;
   --second-background-color: #262525;
+  --selected-background-color: #323232;
   --primary-border: #414141;
   --third-background-color: #4b4949;
   --hover-background-color: #5a5858;
