--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -161,3 +161,29 @@
   height: auto;
   box-sizing: content-box;
 }
+
+/*********************************/
+
+.CollapsableMenu {
+  height: 100%;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.CollapsableMenu .CollapseButton {
+  position: absolute;
+  /*left: 18vw;*/
+  /*in render*/
+  top: 44%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.CollapsableMenu .CollapseButton .icon {
+  /*transform: scale(0.8);*/
+  /*in renderer*/
+  transition: all 0.3s ease;
+}
