--- a/src/renderer/components/views/SettingsViews/css/VersionSettingsViewStyle.module.css
+++ b/src/renderer/components/views/SettingsViews/css/VersionSettingsViewStyle.module.css
@@ -1,6 +1,5 @@
 .View {
-  position: absolute;
-  bottom: 0;
+
 }
 
 .pathSelector {
@@ -48,9 +47,8 @@
   gap: 1vh;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   box-sizing: border-box;
-  padding-left: 5vw;
 }
 
 .VersionTool .card {
