--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
     <title>Bush Launcher</title>
   </head>
-  <body>
+  <body class='Theme-Dark'>
     <div id="root"></div>
   </body>
 </html>
