global dependencies update
- Updated all npm packages
- Cleaned some code

--- a/src/renderer/components/main/css/LaunchButton.module.css
+++ b/src/renderer/components/main/css/LaunchButton.module.css
@@ -136,7 +136,7 @@
 }
 
 .LaunchButton.offlineStyle {
-  background-color: gray;
+  background-color: grey;
 }
 
 .LaunchButton.offlineStyle::before {
