--- a/src/renderer/components/main/css/LaunchButton.module.css
+++ b/src/renderer/components/main/css/LaunchButton.module.css
@@ -255,7 +255,15 @@
   text-align: center;
   width: fit-content;
 }
+.LaunchButton[data-version-selector='false'] .versionText {
+  flex: none;
+  font: 400 30px/46px SquareFont, serif;
+  order: -1;
+  text-align: center;
+  width: fit-content;
+  margin-left: 1vw;
 
+}
 .LaunchButton[data-version-selector='true'] .versionSelector .dataContainer:hover .dropdownIcon,
 .LaunchButton[data-version-selector='true'][data-version-selector-opened='true'] .versionSelector .dataContainer .dropdownIcon {
   transform: scale(1.3) translateY(3px);
