--- a/src/renderer/components/main/css/LaunchButton.module.css
+++ b/src/renderer/components/main/css/LaunchButton.module.css
@@ -8,8 +8,9 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
-  height: 12vh;
+  height: 14vh;
   min-width: 300px;
+  width: fit-content;
   padding: 10px 1vw;
   transition: all .5s;
   position: relative;
