--- a/src/renderer/components/public/css/publicStyle.module.css
+++ b/src/renderer/components/public/css/publicStyle.module.css
@@ -9,13 +9,14 @@
 /**********************************/
 
 
-.GameIcon {
-  width: 10vw;
+.GameImage {
+  width: 30vw;
   height: 10vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
+
 
 /****************************/
 
