--- a/src/renderer/components/views/css/defaultViewStyle.module.css
+++ b/src/renderer/components/views/css/defaultViewStyle.module.css
@@ -2,17 +2,19 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 10vh;
   flex-direction: column;
-  padding: 10px;
+  /*+ 6vh to remove the main menu at the bottom*/
+  padding: 15vh 10px calc(15vh + 6vh) 10px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   backdrop-filter: blur(2px) brightness(80%);
 }
 
-/*.Main .BackgroundImage {
+.Main .BackgroundImage {
   position: absolute;
   top: 0;
   left: 0;
@@ -20,7 +22,13 @@
   right: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
-
+  z-index: -1;
+  object-fit: cover;
+  object-position: right;
 }
-*/
+
+.Main .GameIcon {
+  position: absolute;
+  top: 10vh;
+}
+
