Fixed Auth error handle

--- a/src/renderer/css/LoginPanel.module.css
+++ b/src/renderer/css/LoginPanel.module.css
@@ -1,53 +1,4 @@
 .LoginPanel {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 12;
-}
-
-.LoginPanel .content {
-  width: 40vw;
-  height: 80vh;
-  border-radius: 15px;
-  position: relative;
-  background-color: var(--background-color);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  box-sizing: border-box;
+  min-height: 40vh;
   padding: 20px;
-}
-
-.LoginPanel .content .closeButton {
-  width: 4vw;
-  height: 4vw;
-  position: absolute;
-  top: -1vw;
-  right: -1vw;
-  padding: 0;
-}
-
-.LoginPanel .content .closeButton .closeIcon {
-  width: 100%;
-  height: 100%;
-}
-
-.LoginPanel .content .title {
-  font-size: var(--big-size);
-}
-
-.LoginPanel .content .authProviderList {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 5px;
 }
