--- a/src/renderer/css/defaultStyle.css
+++ b/src/renderer/css/defaultStyle.css
@@ -72,13 +72,21 @@ body {
 
 #root,
 body,
-html,
-#MAIN,
-#Theme-container,
-.Theme-container {
-  width: 100%;
-  height: 100%;
+html {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: stretch;
+  justify-content: stretch;
+  flex-direction: column;
   overflow: hidden;
+  position: relative;
+}
+
+#App {
+  /*App takes all remaining place*/
+  flex-grow: 1;
+  /*handle absolute elements*/
   position: relative;
 }
 
